--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,6 +38,8 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "babel-eslint": "^10.1.0",
+    "nodemon": "^2.0.4",
+    "parser": "babel-eslint"
   }
 }
